[package]
name = "ron-parser"
version = "0.1.2"
edition = "2021"
description = "Parsing debug implementation from rust object to JSON"
license = "MIT"
repository = "https://github.com/NishantJoshi00/debug-parser"
exclude = ["/pkg", "/.github"]

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
serde = { version = "1.0.164", features = [ "derive" ]}
serde_json = "1.0.96"
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2.86" }

[dev-dependencies]
serde = { version = "1.0.164", features = [ "derive" ]}
serde_json = "1.0.96"
criterion = "0.5"

[[bench]]
name = "worktable"
harness = false
